--- a/includes/content.html
+++ b/includes/content.html
@@ -2,8 +2,35 @@
     <p>Here is content in a file named <b>content1.php</b> and in a div with an id of <b>div1</b></p>
     <p>Let's pretend it's clever and/or important!</p>
     <p>Look!  There's a cute kitten picture in here!</p>
-    <img src="images/rabbit.jpg" id="rabbit" align="right" />
+
+    <img src="images/rabbit.jpg" id="rabbit" align="center"/>
+    <img src="images/fox.jpg" id="fox" align="center"/>
+    <img src="images/opossum.jpg" id="opossum" align="center"/>
+    <img src="images/chinchilla.jpg" id="chinchilla" align="center"/>
+    <img src="images/cougar.jpg" id="cougar" align="center"/>
+    <img src="images/hyrax.jpg" id="hyrax" align="center"/>
+    <img src="images/african-savanna-hare.jpg" id="african-savanna-hare" align="center"/>
+    <img src="images/mongoose.jpg" id="mongoose" align="center"/>
+    <img src="images/honey-badger.jpg" id="honey-badger" align="center"/>
+    <img src="images/green-iguana.jpg" id="green-iguana" align="center"/>
+    <img src="images/komodo-dragon.jpg" id="komodo-dragon" align="center"/>
+    <img src="images/blue-tongued-skink.jpg" id="blue-tongued-skink" align="center"/>
+    <img src="images/bog-turtle.jpg" id="bog-turtle" align="center"/>
+    <img src="images/western-skink.jpg" id="western-skink" align="center"/>
+    <img src="images/leopard-tortoise.jpg" id="leopard-tortoise" align="center"/>
+    <img src="images/rock-python.jpg" id="rock-python" align="center"/>
+    <img src="images/armadillo.jpg" id="armadillo" align="center"/>
+    <img src="images/hedgehog.jpg" id="hedgehog" align="center"/>
+    <img src="images/true-toad.jpg" id="true-toad" align="center"/>
+    <img src="images/pig.jpg" id="pig" align="center"/>
+    <img src="images/moose.jpg" id="moose" align="center"/>
+    <img src="images/barn-owl.jpg" id="barn-owl" align="center"/>
+    <img src="images/mountain-frog.jpg" id="mountain-frog" align="center"/>
+    <img src="images/elephant.jpg" id="elephant" align="center"/>
+    <img src="images/tiger-salamander.jpg" id="tiger-salamander" align="center"/>
+    <img src="images/ostrich.jpg" id="ostrich" align="center"/>
     <!-- add more image links to other pictures -->
+
 </div>
 <div id="div2">
     <p>Here is content in a file named <b>content1.php</b> and in a div with an id of <b>div2</b></p>
